feat: handle tracks
